# Multi-stage-dividend-pipeline

./: Dockerfile  README.md  pyproject.toml
webscraping/: requirements.txt  yahoo_finance_scrape.py
