[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["rickantonais <rickantonais@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
